# aum

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  flake.nix  pyproject.toml  treefmt.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  test.yml
aum/: __init__.py  api.py  cli.py  dirwalk.py  meilisearch.py  sonic.py  tika.py  util.py
aum-api/: Cargo.toml  build.rs
aum-api/src/: dto.rs  email_preview.rs  error.rs  lib.rs  main.rs  state.rs
aum-api/src/extractors/: auth.rs  mod.rs
aum-api/src/routes/: auth.rs  indices.rs  mod.rs  search.rs
aum-cli/: Cargo.toml
aum-cli/src/: backend.rs  ingest_common.rs  main.rs  output.rs  progress.rs
aum-cli/src/commands/: config.rs  embed.rs  indices.rs  ingest.rs  init.rs  job.rs  jobs.rs  mod.rs  reset.rs  resume.rs  retry.rs  search.rs  user.rs
aum-core/: Cargo.toml
aum-core/migrations/: 20240101000000_initial.sql  20260403000000_jobs_ocr_settings.sql  20260404000000_auth.sql  20260407000000_embedding_model_details.sql
aum-core/src/: config.rs  lib.rs  log.rs  metrics.rs  models.rs  names.rs  pool.rs
aum-core/src/auth/: error.rs  invitations.rs  mod.rs  models.rs  password.rs  permissions.rs  rate_limit.rs  repository.rs  sessions.rs  users.rs
aum-core/src/db/: embeddings.rs  error.rs  errors.rs  jobs.rs  mod.rs  pool.rs  repository.rs  tracker.rs
aum-core/src/embeddings/: backend.rs  chunking.rs  error.rs  mod.rs  ollama.rs  openai.rs  pipeline.rs
aum-core/src/extraction/: error.rs  mod.rs  tika.rs
aum-core/src/ingest/: display_path.rs  doc_id.rs  error.rs  lock.rs  mod.rs  pipeline.rs  progress.rs  sink.rs  walker.rs  worker.rs
aum-core/src/search/: backend.rs  constants.rs  dispatch.rs  meta.rs  mod.rs  types.rs  utils.rs
aum-core/src/search/elasticsearch/: meta.rs  mod.rs  parse.rs  query.rs  settings.rs
aum-core/src/search/meilisearch/: batching.rs  filter.rs  meta.rs  mod.rs  parse.rs  settings.rs
aum-core/src/search/opensearch/: meta.rs  mod.rs  parse.rs  query.rs  settings.rs
aum-macros/: Cargo.toml
aum-macros/src/: config_default.rs  config_docs.rs  config_values.rs  lib.rs  util.rs
aum/public/: index.html
docs/: PROMETHEUS.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: DocumentPreview.svelte  FacetPanel.svelte  HtmlPreview.svelte  ImagePreview.svelte  IndexSelector.svelte  KeyboardHelp.svelte  PdfPreview.svelte  ResultCard.svelte  ResultList.svelte  SearchBar.svelte
frontend/src/lib/: api.ts  auth.ts  highlight.ts  mime.ts  sanitize.ts  searchState.svelte.ts  types.ts  webauthn.ts
frontend/src/lib/components/: Results.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Document.svelte  Invite.svelte  Login.svelte  Search.svelte
nix/: module.nix
src/aum/: __init__.py  __main__.py  cli.py  config.py  logging.py  metrics.py  models.py  names.py  pool.py
src/aum/api/: app.py  deps.py  email_preview.py  middleware.py
src/aum/api/routes/: auth.py  jobs.py  search.py
src/aum/auth/: local.py  models.py  oauth.py  permissions.py  tokens.py  webauthn.py
src/aum/embeddings/: base.py  chunking.py  ollama.py  openai.py  sentence_transformers.py
src/aum/extraction/: base.py  tika.py
src/aum/ingest/: lock.py  pipeline.py  tracker.py
src/aum/search/: base.py  elasticsearch.py  meilisearch.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_api_endpoints.py  test_api_preview.py  test_api_search.py  test_auth.py  test_cli.py  test_cli_search.py  test_config.py  test_dirwalk.py  test_email_preview.py  test_embeddings.py  test_extraction.py  test_ingest.py  test_lock.py  test_meilisearch.py  test_middleware.py  test_names.py  test_oauth.py  test_pool.py  test_search_base.py  test_search_meilisearch.py  test_sonic.py  test_tika.py  test_webauthn.py
tests/data/: test.docx
tests/data/test/: test.txt
tests/integration/: conftest.py  test_frontend.py  test_integration.py
