[workspace]
members = [
    "aum-macros",
    "aum-core",
    "aum-cli",
    "aum-api",
]
default-members = ["aum-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["PapayaJackal"]
license = "AGPL-3.0-only"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
metrics = "0.24.3"
