[workspace]
members = [
    "aum-macros",
    "aum-core",
    "aum-cli",
    "aum-api",
]
default-members = ["aum-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["PapayaJackal"]
license = "AGPL-3.0-only"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-timing = { version = "0.7.0", features = ["layer"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
metrics = "0.24.3"
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
async-trait = "0.1.89"
futures = "0.3.32"
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
async_zip = { version = "0.0.18", features = ["tokio", "tokio-fs"] }
blake3 = "1.8.4"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
serde_json = "1"
async-stream = "0.3.6"
async-walkdir = "2.1.0"
rand = "0.10.0"
phf = { version = "0.13.1", features = ["macros"] }
meilisearch-sdk = "0.32"
