[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aum"
version = "0.1.0"
description = "Tiny document full-text search engine"
authors = ["Your Name <you@example.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
meilisearch = "^0.31.6"
starlette = "^0.39.2"
tika-client = "^0.7.0"
uvicorn = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
aum = "aum.cli:main"

[tool.pylint]
disable = [
  "C0114", # Missing module docstring
  "C0115", # Missing class docstring
  "C0116", # Missing function or method docstring
  "E0401", # Unable to import
  "R0903" # Too few public methods
]
max-line-length = 100

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
  "tests"
]
markers = [
  "integration"
]
