[project]
name = "aum"
version = "0.2.0"
description = "Document search engine with pluggable backends"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3",
    "pydantic-settings>=2.13",
    "structlog>=25.5",
    "prometheus-client>=0.24",
    "elasticsearch>=9.3",
    "meilisearch>=0.40",
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "pyjwt>=2.12",
    "argon2-cffi>=25.1",
    "authlib>=1.6",
    "httpx>=0.28",
    "rich>=14.3",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-order>=1.3",
    "pytest-playwright>=0.7",
    "ruff>=0.15",
    "mypy>=1.19",
    "httpx>=0.28",
]

[project.scripts]
aum = "aum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aum"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"
markers = [
    "integration: integration tests requiring external services",
]
