[package]
name = "aum-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aum-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aum-core = { path = "../aum-core" }
tracing = { workspace = true }
tokio = { workspace = true }
