[package]
name = "aum-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aum-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aum-core = { path = "../aum-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
ammonia = { workspace = true }
mime_guess = { workspace = true }
mailparse = { workspace = true }
regex = { workspace = true }
base64ct = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tokio-util.workspace = true
rust-embed = { version = "8.11.0", optional = true }

[features]
bundle-frontend = ["dep:rust-embed"]
