[package]
name = "aum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aum-macros = { path = "../aum-macros" }
serde = { workspace = true }
figment = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-timing = { workspace = true }
tracing-futures = { workspace = true }
metrics = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async_zip = { workspace = true }
blake3 = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
tempfile = "3"

[dev-dependencies]
anyhow = { workspace = true }
wiremock = "0.6"
